--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
+  <!-- <script src="https://unpkg.com/scrollreveal@4"></script> -->
+  <script src="./fcmb.js"></script>
+
   <style>
     * {
       padding: 0;
@@ -686,12 +689,23 @@
       </div>
     </div>
   </div>
+  <div class="container-fluid ">
+    <div class="line"></div>
+  </div>
 
+  <div class="container-fluid">
+    <h2>SITEMAP</h2>
+    <div class="full-table">
+      <table table-responsive border="1" class="">
+        <th>
+
+        </th>
+      </table>
+    </div>
+  </div>
   </div>
 </head>
-<script>
-  
-</script>
+
 </body>
 
 </html>
