--- a/index.html
+++ b/index.html
@@ -656,11 +656,20 @@
       width: 100%;
     }
 
-    .container-tab{
+    /* .container-tab{
       width: 100%;
+    } */
+
+
+.foot1-text {
+      list-style: none;
+      font-size: 23px;
+      color: white;
+      margin-left: 55%;
+      justify-content: right;
+      position: absolute;
+
     }
-
-
   }
 
   </style>
