--- a/index.html
+++ b/index.html
@@ -670,6 +670,30 @@
       position: absolute;
 
     }
+    .logos-icons li {
+      display: flex;
+      list-style: none;
+      padding:10px 10px;
+      gap: 90px;
+      color: white;
+      justify-content: space-between;
+      background: #5B2784;
+      font-size: 24px;
+      border-radius: 300px 300px 300px 300px;
+      cursor: pointer;
+
+    }
+  
+
+  .footer2-ul li {
+      display: inline-flex;
+      list-style: none;
+      padding: 12px 12px;
+      justify-content: space-between;
+      gap: 20px;
+    }
+
+
   }
 
   </style>
