--- a/index.html
+++ b/index.html
@@ -521,6 +521,7 @@
     }
     .container-end{
       width: 100%;
+  
     }
 
     .foot1 {
@@ -638,16 +639,16 @@
       background: url(./asset/img/Website\ Banner\ Refresh_Business\ Loans.jpg);
       width: 100%;
       height: 270px;
-      background-position: center;
-      background-size: 30rem;
+      background-position:75rem;
+      background-size: 48rem;
     }
 
     .pic5-slide {
       background: url(./asset/img/Website\ Banner\ Refresh_GRO.jpg);
       width: 100%;
       height: 270px;
-      background-position: center;
-      background-size: 30rem;
+      background-position: 71rem;
+      background-size: 43rem;
     }
 
 
@@ -693,6 +694,86 @@
       gap: 20px;
     }
 
+
+    .slider-1 {
+      text-align: left;
+      padding-right: 40px;
+      margin-bottom: 140px;
+      font-size: 17px;
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: 700;
+      color: #5B2784;
+      margin-left: -48px;
+    }
+
+    .slider-p {
+      position: absolute;
+      text-align: left;
+      margin-top: -140px;
+      font-size: 12px;
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: 600;
+      color: #5B2784;
+      line-height: 1rem;
+      margin-left: -48px;
+    }
+
+    .button-slides {
+      background: purple;
+      /* position: absolute; */
+      padding: 7px;
+      color: white;
+      font-weight: 500;
+      width: 170px;
+      border: none;
+      float: left;
+      margin-left: -45px;
+      margin-top: -50px;
+
+    }
+    .section-2-back {
+      background: url(./asset/img/mobileapp.jpg);
+      width: 100%;
+      height: 380px;
+      background-position:90rem;
+      background-size: 22rem;
+      background-repeat:repeat-x;
+      border: 2px dotted rgb(209, 204, 204);
+    }
+
+    .section-1 {
+      font-family: Arial, Helvetica, sans-serif;
+      font-weight: 700;
+      color: #5B2784;
+      margin-left: 40px;
+      /* padding-top: 60px; */
+    }
+
+    .section-p {
+      font-family: Arial, Helvetica, sans-serif;
+      font-size: 13px;
+      color: rgb(32, 32, 32);
+      margin-left: 40px;
+      line-height: none;
+      /* padding-top: 170px; */
+
+    }
+
+    .btn-section {
+      padding: 7px;
+      width: 180px;
+      background: #A6368C;
+      float: right;
+      color: white;
+      margin-top: 100px;
+      margin-right: 10px;
+      border-radius: 0px 0px 0px 0px;
+    }
+    .card2 {
+      height: 260px;
+      background: rgb(244, 241, 241);
+      margin-bottom: 20px;
+    }
 
   }
 
@@ -1147,7 +1228,7 @@
   </div>
   </div>
   </div>
-  <div class="container-end">
+  <!-- <div class="container-end"> -->
     <footer>
       <div class="foot1">
     <li class="foot1-text">my bank and I</li>
