--- a/index.html
+++ b/index.html
@@ -657,42 +657,8 @@
       width: 100%;
     }
 
-    /* .container-tab{
-      width: 100%;
-    } */
 
 
-.foot1-text {
-      list-style: none;
-      font-size: 23px;
-      color: white;
-      margin-left: 55%;
-      justify-content: right;
-      position: absolute;
-
-    }
-    .logos-icons li {
-      display: flex;
-      list-style: none;
-      padding:10px 10px;
-      gap: 90px;
-      color: white;
-      justify-content: space-between;
-      background: #5B2784;
-      font-size: 24px;
-      border-radius: 300px 300px 300px 300px;
-      cursor: pointer;
-
-    }
-  
-
-  .footer2-ul li {
-      display: inline-flex;
-      list-style: none;
-      padding: 12px 12px;
-      justify-content: space-between;
-      gap: 20px;
-    }
 
 
     .slider-1 {
@@ -731,6 +697,16 @@
       margin-top: -50px;
 
     }
+
+    .card2 {
+      height: 260px;
+      background: rgb(244, 241, 241);
+      margin-bottom: 20px;
+    }
+    .card{
+      margin-bottom: 20px;
+    }
+
     .section-2-back {
       background: url(./asset/img/mobileapp.jpg);
       width: 100%;
@@ -769,11 +745,40 @@
       margin-right: 10px;
       border-radius: 0px 0px 0px 0px;
     }
-    .card2 {
-      height: 260px;
-      background: rgb(244, 241, 241);
-      margin-bottom: 20px;
+
+    .foot1-text {
+      list-style: none;
+      font-size: 23px;
+      color: white;
+      margin-left: 55%;
+      justify-content: right;
+      position: absolute;
+
     }
+    .logos-icons li {
+      display: flex;
+      list-style: none;
+      padding:10px 10px;
+      gap: 90px;
+      color: white;
+      justify-content: space-between;
+      background: #5B2784;
+      font-size: 24px;
+      border-radius: 300px 300px 300px 300px;
+      cursor: pointer;
+
+    }
+  
+
+  .footer2-ul li {
+      display: inline-flex;
+      list-style: none;
+      padding: 12px 12px;
+      justify-content: space-between;
+      gap: 20px;
+    }
+
+    
 
   }
 
