--- a/index.html
+++ b/index.html
@@ -209,6 +209,35 @@
       justify-content: space-between;
     }
 
+    .dropdown-inside1 {
+      position: relative;
+    }
+
+    .dropinside-content1 {
+      position: absolute;
+      z-index: 2;
+      width: 270px;
+      height: 290px;
+      background: #5A2C82;
+      color: white;
+      display: none;
+      border-radius: 10px 10px 10px 10px;
+      margin-right: -130px;
+      box-shadow: 1px 1px 1px 1px rgb(186, 184, 184);
+      justify-content: space-between;
+      line-height: 2rem;
+      font-weight: 500;
+      margin-top: 40px;
+      list-style: none;
+    }
+
+    .dropdown-inside1:hover .dropinside-content1 {
+      display: block;
+      padding: 20px;
+      justify-content: space-between;
+    }
+
+
 
     .dropdown-menu2 {
       position: relative;
@@ -256,7 +285,7 @@
       justify-content: space-between;
       line-height: 2rem;
       font-weight: 500;
-      list-style:none ;
+      list-style: none;
     }
 
     .dropdown-menu3:hover .dropdown-content3 {
@@ -284,7 +313,7 @@
       justify-content: space-between;
       line-height: 2rem;
       font-weight: 500;
-      list-style:none ;
+      list-style: none;
     }
 
     .dropdown-menu4:hover .dropdown-content4 {
@@ -312,7 +341,7 @@
       justify-content: space-between;
       line-height: 2rem;
       font-weight: 500;
-      list-style:none ;
+      list-style: none;
     }
 
     .dropdown-menu5:hover .dropdown-content5 {
@@ -339,7 +368,7 @@
       justify-content: space-between;
       line-height: 2rem;
       font-weight: 500;
-      list-style:none ;
+      list-style: none;
     }
 
     .dropdown-menu6:hover .dropdown-content6 {
@@ -1022,13 +1051,26 @@
             <ul class="dropdown-content1">
               <li>CURRENT ACCOUNTS</li>
               <li>SAVINGS ACCOUNTS</li>
-              <li>INVESTMENTS</li>
-              <li>LOANS AND CREDIT CARDS</li>
+              <li>INVESTMENTS</li>           
+              <li class="dropdown-inside1">LOANS AND CREDIT CARDS
+                <ul class="dropinside-content1">
+                  <li><i class="fa-solid fa-caret-left"></i>FASTCASH</li>
+                  <li>SALARY PLUS LOAN</li>
+                  <li>PREMIUM SALARY LOAN</li>
+                  <li>AUTO LOAN</li>
+                  <li>AIRTIME LOAN</li>
+                  <li>CREDIT CARDS</li>
+                  <li>EASYLIFT LOAN</li>
+                  <li>MORTGAGE</li>
+                </ul>
+              </li>         
               <li>NON-RESIDENT NIGERIAN(NRN) BANKING</li>
               <li>WAYS TO BANK</li>
               <li>BANCASSURANCE</li>
             </ul>
           </li>
+
+
           <li class="dropdown-menu2">BUSINESS BANKING
             <ul class="dropdown-content2">
               <li>PROPOSITIONS</li>
