--- a/index.html
+++ b/index.html
@@ -947,7 +947,7 @@
       input[type=text] {
       padding: 5px;
       border: 1px solid #5B2784;
-      width: 330px;
+      width: 100%;
       outline: none;
       box-shadow: 0px 8px 16px 0px rgba(104, 28, 69, 0.2);
       border-right: none;
