--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
       list-style: none;
       margin-bottom: 0;
       padding: 10px;
+      height: 47px;
     }
 
     .navbar2 {
@@ -839,6 +840,7 @@
 
       .logo img {
         width: 70px;
+        margin-left:40px;
       }
 
       .navbar {
@@ -1197,6 +1199,10 @@
         display: flex;
       }
 
+      .logo img {
+        /* margin-left:-5px; */
+      }
+
       input[type=text] {
         padding: 5px;
         border: 1px solid #5B2784;
@@ -1204,6 +1210,7 @@
         outline: none;
         box-shadow: 0px 8px 16px 0px rgba(104, 28, 69, 0.2);
         border-right: none;
+        margin-left: 2px;
 
 
       }
