--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
       display: none;
       width: 250px;
       position: absolute;
-      z-index: 2;
+      z-index: 1;
       height: 300px;
       background: #5A2C82;
       margin-top: 5px;
@@ -219,7 +219,7 @@
 
     .dropinside-content1 {
       position: absolute;
-      z-index: 100;
+      z-index: 500;
       width: 270px;
       height: 290px;
       background: #5A2C82;
@@ -231,7 +231,7 @@
       justify-content: space-between;
       line-height: 2rem;
       font-weight: 500;
-      margin-bottom: 400px;
+      margin-bottom: 50%;
       list-style: none;
       align-items: center;
 
@@ -517,8 +517,9 @@
       border-radius: 0px 0px 0px 0px;
       font-size: 13px;
       border: none;
-      margin-top: 75px;
+      margin-top: 25%;
       margin-left: 100px;
+      align-items: center;
     }
 
     .btn-2 {
@@ -528,7 +529,7 @@
       border-radius: 0px 0px 0px 0px;
       font-size: 13px;
       border: none;
-      margin-top: 75px;
+      margin-top: 25%;
       font-size: 12px;
       margin-left: 100px;
     }
@@ -540,7 +541,7 @@
       border-radius: 0px 0px 0px 0px;
       font-size: 13px;
       border: none;
-      margin-top: 60px;
+      margin-top: 18%;
       margin-left: 100px;
     }
 
@@ -551,7 +552,7 @@
       border-radius: 0px 0px 0px 0px;
       font-size: 13px;
       border: none;
-      margin-top: 70px;
+      margin-top: 22%;
       margin-left: 100px;
     }
 
@@ -646,7 +647,18 @@
       color: #5B2784;
       font-weight: 700;
       float: right;
-      margin-top: 45px;
+      margin-top: 40px;
+
+    }
+
+    .btn-card22 {
+      padding: 5px;
+      line-height: 1rem;
+      width: 170px;
+      color: #5B2784;
+      font-weight: 700;
+      float: right;
+      margin-top: 5px;
 
     }
 
@@ -1754,7 +1766,7 @@
             <h5 class="card2-header">EASY ACCOUNT</h5>
             <p class="card2-text">No bank visits. No paperwork. No BVN.
               Simply <br> open a bank account with your phone number <br> on your phone – no data required.</p>
-            <button class="btn btn-card2">Learn More <i class="fa-solid fa-angle-right"></i></button>
+            <button class="btn btn-card22">Learn More <i class="fa-solid fa-angle-right"></i></button>
           </div>
         </div>
       </div>
