--- a/index.html
+++ b/index.html
@@ -140,6 +140,40 @@
       cursor: pointer;
     }
 
+    .dropdown-top2{
+      position: relative;
+    }
+
+    .dropcontent-top2{
+      display: none;
+      position: absolute;
+      z-index: 10;
+      width:180px;
+      background:#a81e67;
+      padding: 10px 70px 10px 10px;
+      align-items: center;
+      margin-top: 145px;
+      margin-left:-26px;
+      color: white;
+      height: 120px;
+      justify-content: space-between;
+      line-height: 2rem;
+      font-weight: 600;
+      box-shadow: 3px 5px 3px 1px rgb(27, 27, 27, 0.3);
+
+
+
+    }
+    .dropdown-top2:hover .dropcontent-top2{
+      display: block;
+      
+      
+    }
+
+    .dropcontent-top2 li:hover{
+      color: orange;
+    }
+
     .top-3 {
       color: white;
       font-size: 14px;
@@ -1451,7 +1485,13 @@
 
             <li class="top-1">OPEN AN ACCOUNT</li>
 
-            <li class="top-2">INTERNET BANKING</li>
+            <li class="top-2 dropdown-top2">INTERNET BANKING
+              <ul class="dropcontent-top2">
+                <li>Personal</li>
+                <li>Business</li>
+                <li>Corporate</li>
+              </ul>
+            </li>
 
             <li class="top-3">CONTACT US</li>
 
