--- a/index.html
+++ b/index.html
@@ -563,7 +563,7 @@
       border-radius: 0px 0px 0px 0px;
       font-size: 13px;
       border: none;
-      margin-top: 25%;
+      margin-top: 33%;
       font-size: 12px;
       margin-left: 100px;
     }
@@ -886,7 +886,11 @@
 
       .logo img {
         width: 70px;
-        margin-left:40px;
+        margin-left:100px;
+        
+      }
+      header{
+        margin-top: 400px;
       }
 
       .navbar {
@@ -897,7 +901,7 @@
         justify-content: space-between;
         background: url(./asset/img/topbar_back.jpg);
         padding: 0px 10px;
-        margin-bottom: 0;
+        margin-top:-5px;
       }
 
       .one {
@@ -1426,13 +1430,14 @@
         display: inline-flex;
         list-style: none;
         padding: 10px 10px;
-        gap: 90px;
+        gap:50px;
         color: white;
         justify-content: space-between;
         background: #5B2784;
         font-size: 24px;
         border-radius: 300px 300px 300px 300px;
         cursor: pointer;
+        margin-left: 10px;
 
       }
 
@@ -1440,9 +1445,10 @@
       .footer2-list li {
         display: inline-flex;
         list-style: none;
-        padding: 12px 12px;
+        padding: 5px 19px;
         justify-content: space-between;
         gap: 20px;
+        margin-left: -39px;
       }
 
 
