--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
 
     }
 
-    footer2 {
+    .footer2 {
       display: flex;
       width: 100%;
     }
@@ -865,9 +865,10 @@
     .footer2-list li {
       display: inline-flex;
       list-style: none;
-      padding: 12px 12px;
+      padding: 12px 30px;
       justify-content: space-between;
       gap: 20px;
+      margin-left:-50px;
     }
 
     .footer2-list a {
